--- a/笔记.md
+++ b/笔记.md
@@ -1,11 +1,4 @@
-### TODO
-- 问题实例
-  - 创建消息队列时，创建失败，提示too many open files, errno 为24. 消息队列需要调用mqUnlink才能真正回收不使用的消息队列，mqClose只是关闭，不是销毁
-  - 删除通道时，卡死。 通过strace查看卡死在哪里， 以及通过gdb -p 线程id（线程id可通过pthreadInfo获得）， 然后通过bt查看线程堆栈卡死在哪里 。后面确认是死锁
-  - 一个重启问题，coredump和addr2line定位问题行，发现是线程栈溢出
-  - 一个切换图像界面后，设备很卡的问题，使用top发现cpu占用极高，手动触发coredump, gdb查看线程信息 gdb i thread, 然后bt分析看是哪里
-  - 一个coredump出现 oom-killer 提示信息，内存碎片也有可能出现oom-killer
-
+# TODO
 ### 编写sqlite经验，不需要二次编辑
 
 ### 其它
