--- a/笔记.md
+++ b/笔记.md
@@ -2,5 +2,5 @@
 ### 编写sqlite经验，不需要二次编辑
 
 ### 其它
-- status、statm、maps、smaps查看进程信息，包含heap和mmap匿名内存映射
-- 笔记本上的内容
+- valgrind、 mstrace、 memwatch
+- netstat
