--- a/笔记.md
+++ b/笔记.md
@@ -1,5 +1,5 @@
-# TODO
-### 编写sqlite经验，不需要二次编辑
+### 学习笔记
+- [视频带宽计算公式(码流_分辨率_帧率)](https://www.cnblogs.com/jodyccf/p/13259528.html)
 
 ### 其它
 - valgrind、 mstrace、 memwatch
